--- a/Projeto01/style.css
+++ b/Projeto01/style.css
@@ -1,12 +1,35 @@
-span{
-    color: #FF9900;
+span, a {
+	color: #FF9900;
 }
 
-h1{
-    font-family: 'Inter', sans-serif;
-    font-size: 49px;
+h1 {
+	font-family: 'Inter', sans-serif;
+	font-size: 49px;
+	line-height: 56px;
+	font-weight: normal;
+}
+
+h1 span {
+	font-weight: bold;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+}
+
+p {
+	color: #7D7987;
+	font-size: 14px;
+	line-height: 28px;
+}
+
+#hero {
+	width: 592px;
+	margin: auto;
+}
+
+#balls{
+	right: 0;
+	bottom: 0;
 }
