--- a/Projeto01-Desafios/Corrigir/style.css
+++ b/Projeto01-Desafios/Corrigir/style.css
@@ -1,16 +1,11 @@
 body {
   font-family: "Open Sans", sans-serif;
-  text-align: end;
   margin: 0;
+  text-align: center;
 }
 
-#hero {
-    width: 592px;
-    margin: 72px;
-}
-
-img {
-    margin: 100px;
+span, a {
+  color: #ff9900;
 }
 
 h1 {
@@ -22,12 +17,6 @@ h1 {
 
 h1 span {
   font-weight: bold;
-
-  margin-bottom: 32px;
-}
-
-span, a {
-  color: #ff9900;
 }
 
 p, #footer {
@@ -36,21 +25,29 @@ p, #footer {
   line-height: 28px;
 }
 
-#footer a + a {
-    margin-left: 28px;
+#hero {
+  width: 592px;
+  margin: 0 auto 72px;
 }
 
+#hero img {
+  margin-bottom: 72px;
+}
+
+#footer a+a {
+  margin-left: 28px;
+}
+
+
 .line {
-    width: 568px;
-    height: 0;
-
-    margin: 0 8px;
-
-    border: 1px solid #ECEFF2;
+  width: 568px;
+  height: 0;
+  margin: 0 auto 0px;
+  border: 1px solid #ECEFF2;
 }
 
 #balls {
-    position: fixed;
-    top: 0;
-    right: 0;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
 }
