--- a/Projeto02/style.css
+++ b/Projeto02/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    background: linear-gradient(180deg, rgba(227, 255, 248, 0) 82.08%, rgba(227, 255, 248, 0.38) 100%);
 }
 
 .page{
@@ -13,6 +14,12 @@ nav{
     align-items: center;
     justify-content: space-between;
     margin-bottom: 55px;
+}
+
+main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 ul {
@@ -29,15 +36,38 @@ h1 {
     width: 490px;
 }
 
-p, footer {
+p {
     font-size: 14px;
     line-height: 28px;
     color: #7D7987;
+    margin: 40px 0;
+}
+
+footer {
+    font-size: 14px;
+    line-height: 28px;
+    text-align: center;
+    color:  #1F1534;
+    margin-top: 80px;
 }
 
 button {
     text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
+    background: #69B99D;
+    border: 0;
+    border-radius: 4px;
+    padding: 14px 32px;
+    display: flex;
+    align-items: center;
+    color: white;
+    justify-content: center;
+    gap: 10px;  
+    cursor: pointer;
+}
+
+button:hover{
+    background: #4a806d;
 }
 
 h1 span{
@@ -45,12 +75,12 @@ h1 span{
     font-weight: bold;
 }
 
-ul li a{
+a{
     color: #1F1534;
     text-decoration: none;
 }
 
-ul li a:hover{
+a:hover{
     font-weight: bold;
 }
 
