--- a/Projeto02-Desafios/Avancado/style.css
+++ b/Projeto02-Desafios/Avancado/style.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	min-height: 100vh;
+	height: 100vh;
 	background: #2C2B3D;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -21,6 +21,11 @@ ul {
 a {
 	text-decoration: none;
 	color: #fff;
+}
+
+a:hover {
+	font-weight: bold;
+	color: #747474;
 }
 
 ul li,
@@ -67,11 +72,13 @@ footer {
 	text-align: center;	
 }
 
+
 #line {
-	position: absolute;
+	position: relative;	
 	width: 568px;
 	height: 0px;
 	border: 1px solid #00BFA6;
+	margin-bottom: 28px;
 }
 
 #lock {
