--- a/Projeto03/style.css
+++ b/Projeto03/style.css
@@ -1,5 +1,14 @@
-body {
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body, input, button, select, textarea, p, legend{
 	font-family: 'Poppins', sans-serif;
+}
+
+body {
 	background: #E5E5E5;
 }
 
@@ -30,6 +39,7 @@ header h1 {
 	font-size: 36px;
 	line-height: 42px;
 	color: white;
+	margin-bottom: 24px;
 }
 
 header p {
@@ -45,7 +55,7 @@ form {
 	border-radius: 8px;
 	padding: 64px;
 }
-fr
+
 fieldset {
 	border: none;
 }
@@ -59,4 +69,34 @@ fieldset legend {
 	width: 100%;
 	border-bottom: 1px solid #e6e6f0;
 	padding-bottom: 16px;
+}
+
+.input-wrapper{
+	display: flex;
+	flex-direction: column;
+}
+
+.input-wrapper label {
+	font-size: 14px;
+	line-height: 24px;
+	color: #4e4958;
+	margin-bottom: 8px;
+}
+
+.input-wrapper label span{
+	margin-left: 12px;
+	font-size: 12px;
+	line-height: 28px;
+	color: #C1BCCC;
+}
+
+.input-wrapper input {
+	background: #FAFAFC;
+	border: 1px solid #e6e6f0;
+	border-radius: 8px;
+	height: 56px;
+	padding: 0 24px;
+	font-size: 16px;
+	line-height: 26px;
+	color: #C1BCCC;
 }
