--- a/Projeto03/style.css
+++ b/Projeto03/style.css
@@ -54,6 +54,9 @@ form {
 	min-height: 300px;
 	border-radius: 8px;
 	padding: 64px;
+	display: flex;
+	flex-direction: column;
+	gap: 48px;
 }
 
 fieldset {
@@ -100,7 +103,7 @@ fieldset legend {
 	color:#6C6A71;
 }
 
-.input-wrapper input, .input-wrapper textarea {
+.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
 	background: #FAFAFC;
 	border: 1px solid #e6e6f0;
 	border-radius: 8px;
@@ -114,4 +117,12 @@ fieldset legend {
 .input-wrapper textarea{
 	padding: 0;
 	height: 170px;
+}
+
+.input-wrapper select {
+	appearance: none;
+
+	background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+	background-repeat: no-repeat;
+	background-position: right 24px top 50%;
 }
