--- a/Projeto03/style.css
+++ b/Projeto03/style.css
@@ -52,7 +52,7 @@ form {
 	margin-top: 38px;
 	background: #FAFAFC;
 	min-height: 300px;
-	border-radius: 8px;
+	border-radius:8px 8px 0 0;
 	padding: 64px;
 	display: flex;
 	flex-direction: column;
@@ -85,7 +85,7 @@ fieldset legend {
 	flex-direction: column;
 }
 
-.input-wrapper label {
+.input-wrapper label, .checkbox-wrapper label {
 	font-size: 14px;
 	line-height: 24px;
 	color: #4e4958;
@@ -134,4 +134,56 @@ fieldset legend {
 
 .col-3 > div:nth-child(1) {
 	width: 100%;
+}
+
+.checkbox-wrapper {
+	position: relative;
+}
+
+.checkbox-wrapper label {
+	display: flex;
+	align-items: center;
+	margin: 0;
+	gap: 16px;
+}
+
+.checkbox-wrapper label::before {
+	content: '';
+	width: 24px;
+	height: 24px;
+	border: 1px solid #e6e6f0;
+	border-radius: 8px;
+	display: block;
+}
+
+.checkbox-wrapper input {
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	opacity: 0;
+}
+
+.checkbox-wrapper input:checked + label::before {
+	background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+	
+	background-repeat: no-repeat;
+	background-position: left 50% top 50%;
+}
+
+.checkbox-wrapper input:focus + label::before{
+	outline: 2px solid black;
+}
+
+footer{
+	margin: 0;
+	height: 136px;
+	background: #F0F0F4;
+	border-radius:0 0 8px 8px;
+	display: flex;
+	flex-direction: column;
+	padding: 40px 64px;
+}
+
+footer .button{
+	
 }
