--- a/Projeto03/style.css
+++ b/Projeto03/style.css
@@ -1,10 +1,16 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-body, input, button, select, textarea, p, legend{
+body,
+input,
+button,
+select,
+textarea,
+p,
+legend {
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -52,11 +58,12 @@ form {
 	margin-top: 38px;
 	background: #FAFAFC;
 	min-height: 300px;
-	border-radius:8px 8px 0 0;
+	border-radius: 8px 8px 0 0;
 	padding: 64px;
 	display: flex;
 	flex-direction: column;
 	gap: 48px;
+	border-bottom: 1px solid #D6D6D6;
 }
 
 fieldset {
@@ -80,30 +87,33 @@ fieldset legend {
 	padding-bottom: 16px;
 }
 
-.input-wrapper{
+.input-wrapper {
 	display: flex;
 	flex-direction: column;
 }
 
-.input-wrapper label, .checkbox-wrapper label {
+.input-wrapper label,
+.checkbox-wrapper label {
 	font-size: 14px;
 	line-height: 24px;
 	color: #4e4958;
 	margin-bottom: 8px;
 }
 
-.input-wrapper label span{
+.input-wrapper label span {
 	margin-left: 12px;
 	font-size: 12px;
 	line-height: 28px;
 	color: #C1BCCC;
 }
 
-.input-wrapper label span:hover{
-	color:#6C6A71;
+.input-wrapper label span:hover {
+	color: #6C6A71;
 }
 
-.input-wrapper input, .input-wrapper textarea, .input-wrapper select {
+.input-wrapper input,
+.input-wrapper textarea,
+.input-wrapper select {
 	background: #FAFAFC;
 	border: 1px solid #e6e6f0;
 	border-radius: 8px;
@@ -114,7 +124,7 @@ fieldset legend {
 	color: #6C6A71;
 }
 
-.input-wrapper textarea{
+.input-wrapper textarea {
 	padding: 0;
 	height: 170px;
 }
@@ -127,12 +137,12 @@ fieldset legend {
 	background-position: right 24px top 50%;
 }
 
-.col-3{
-	display:flex;
+.col-3 {
+	display: flex;
 	gap: 20px;
 }
 
-.col-3 > div:nth-child(1) {
+.col-3>div:nth-child(1) {
 	width: 100%;
 }
 
@@ -163,27 +173,44 @@ fieldset legend {
 	opacity: 0;
 }
 
-.checkbox-wrapper input:checked + label::before {
+.checkbox-wrapper input:checked+label::before {
 	background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
-	
+
 	background-repeat: no-repeat;
 	background-position: left 50% top 50%;
 }
 
-.checkbox-wrapper input:focus + label::before{
+.checkbox-wrapper input:focus+label::before {
 	outline: 2px solid black;
 }
 
-footer{
+footer {
 	margin: 0;
 	height: 136px;
 	background: #F0F0F4;
-	border-radius:0 0 8px 8px;
+	border-radius: 0 0 8px 8px;
 	display: flex;
 	flex-direction: column;
 	padding: 40px 64px;
+	margin-bottom: 100px;
 }
 
-footer .button{
-	
+footer .button {
+	height: 56px;
+	border-radius: 8px;
+	background: #04D361;
+	border: none;
+	color: #FFF;
+	font-size: 16px;
+	font-family: 'Archivo',sans-serif;
+	line-height: 26px;
+	color: #FFF;
+}
+
+footer .button:hover {
+	background: #0e703a;
+}
+
+input:invalid {
+	border: 1px solid #FF1010;
 }
