--- a/Projeto03-Desafios/Form/style.css
+++ b/Projeto03-Desafios/Form/style.css
@@ -6,12 +6,12 @@
 
 
 body {
-    background: #BFD7E4;
-    font-family: 'Poppins', sans-serif;
+	background: #BFD7E4;
+	font-family: 'Poppins', sans-serif;
 }
 
 body::before {
-    content: '';
+	content: '';
 	width: 100%;
 	height: 465px;
 	position: absolute;
@@ -23,64 +23,96 @@ body::before {
 
 
 .page {
-    width: 750px;
+	width: 750px;
 	margin: 0 auto 42px;
 }
 
-form{
-    min-height: 300px;
-    width: 100%;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
+form {
+	min-height: 300px;
+	width: 100%;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	border-radius: 20px;
 }
 
-h1, legend {
-    font-family: 'Staatliches';
+h1,
+legend {
+	font-family: 'Staatliches';
 }
 
 header {
-    width: 750px;
-    height: 225px;
-    margin-top: 107px;
-    text-align: center;
+	width: 750px;
+	height: 225px;
+	margin-top: 107px;
+	text-align: center;
 }
 
 header img {
-    margin-top: 28px;
+	margin-top: 28px;
 }
 
 h1 {
-    font-size: 36px;
-    color: white;
-    line-height: 45px;
+	font-size: 36px;
+	color: white;
+	line-height: 45px;
 }
 
-p{
-    color: white;
-    font-size: 16px;    
+p {
+	color: white;
+	font-size: 16px;
 }
 
-fieldset{
-    border: none;
+fieldset {
+	border: none;
 }
 
 .fieldset-dig {
-    display: flex;
+	display: flex;
 	flex-direction: column;
-	gap: 24px;
+}
+
+.inputs {
+	display: flex;
+	flex-direction: column;
+	padding: 30px 64px 64px;
+	gap: 15px;
+	width: 622px;
 }
 
 fieldset legend {
-    font-size: 24px;
-    line-height: 34px;
-    text-align: center;
-    height: 133px;
-    background: #F67669;
-    color: white;
-    border-radius: 20px 20px 0 0;
-    padding-top: 50px;
+	font-size: 24px;
+	line-height: 34px;
+	text-align: center;
+	height: 133px;
+	background: #F67669;
+	color: white;
+	border-radius: 20px 20px 0 0;
+	padding-top: 50px;
 }
 
+.input-dig {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
 
+.input-dig input {
+	background: #FAFAFC;
+	border-radius: 8px;
+	width: 300px;
+	height: 55px;
+	border: 1px solid #E6E6F0;
+}
+
+.input-dig label {
+	color: #4E4958;
+	font-size: 14px;
+	line-height: 24px;
+}
+
+.col-name {
+	display: flex;
+	flex-direction: row;
+	gap: 22px;
+}
