--- a/Projeto03-Desafios/Form/style.css
+++ b/Projeto03-Desafios/Form/style.css
@@ -37,7 +37,7 @@ form {
 }
 
 h1,
-legend {
+legend, button {
 	font-family: 'Staatliches';
 }
 
@@ -75,12 +75,13 @@ fieldset {
 .inputs {
 	display: flex;
 	flex-direction: column;
-	padding: 30px 64px 64px;
+	padding: 30px 64px 30px;
 	gap: 15px;
-	width: 622px;
+	width: 750px;
 }
 
-fieldset legend {
+
+.first-legend {
 	font-size: 24px;
 	line-height: 34px;
 	text-align: center;
@@ -91,21 +92,48 @@ fieldset legend {
 	padding-top: 50px;
 }
 
+fieldset legend {
+	color: #253B51;
+	font-size: 24px;
+	line-height: 34px;
+	text-align: center;
+}
+
+.line {
+	border-bottom: 1px solid #E6E6F0;
+	width: 622px;
+	margin-left: 64px;
+	margin-top: 7.5px;
+}
+
 .input-dig {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
 }
 
-.input-dig input {
-	background: #FAFAFC;
-	border-radius: 8px;
-	width: 300px;
-	height: 55px;
-	border: 1px solid #E6E6F0;
+.input-dig span {
+	color: #C1BCCC;
+	font-size: 12px;
+	line-height: 20px;
 }
 
-.input-dig label {
+.input-dig span:hover {
+	color: #8f899e;
+}
+
+.input-dig input,
+.input-dig select, .input-dig textarea {
+	background: #FAFAFC;
+	border-radius: 8px;
+	width: 100%;
+	height: 55px;
+	border: 1px solid #E6E6F0;
+	font-family: 'Poppins', sans-serif;
+	padding-left: 10px;
+}
+
+.input-dig label, .checkbox-dig label {
 	color: #4E4958;
 	font-size: 14px;
 	line-height: 24px;
@@ -115,4 +143,85 @@ fieldset legend {
 	display: flex;
 	flex-direction: row;
 	gap: 22px;
+}
+
+.col-name input,
+.input-dig select {
+	width: 300px;
+}
+
+.input-dig select {
+	appearance: none;
+}
+
+.input-dig textarea {
+	height: 166px;
+}
+
+.checkbox-dig {
+	position: relative;
+}
+
+.checkbox-dig label {
+	display: flex;
+	margin: 0;
+	gap: 8px;
+}
+
+.checkbox-dig label::before {
+	content: '';
+	width: 24px;
+	height: 24px;
+	border: 1px solid #e6e6f0;
+	border-radius: 8px;
+	display: block;
+}
+
+.checkbox-dig input {
+	position: absolute;
+	width: 24px;
+	height: 24px;
+	opacity: 0;
+}
+
+.checkbox-dig input:checked+label::before {
+	background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 11.17L1.83 7L0.410004 8.41L6 14L18 2L16.59 0.589996L6 11.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+
+	background-repeat: no-repeat;
+	background-position: left 50% top 50%;
+}
+
+.checkbox-dig input:focus+label::before {
+	outline: 2px solid black;
+}
+
+.col-date {
+	display: flex;
+	flex-direction: row;
+	gap: 30px;
+}
+
+.col-datetime {
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+}
+
+.col-date>div:nth-child(1) {
+	width: 375px;
+}
+
+button {
+	height: 51px;
+	border-radius: 8px;
+	background: #F67669;
+	margin: 34px 64px 64px;
+	color: white;
+	border: none;
+	font-size: 20px;
+	line-height: 26px;
+}
+
+button:hover {
+	background: #ac3f32;
 }
