--- a/Projeto03/Avancado/style.css
+++ b/Projeto03/Avancado/style.css
@@ -74,14 +74,12 @@ h1 {
 main {
   margin-top: 36rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 390rem);
   gap: 21px
 }
 
 .card {
-  width: 390rem;
   background: #FFF;
-  max-height: 290rem;
 
   display: flex;
   flex-direction: column;
